<resources>
    <string name="topic">主题测试</string>
    <string name="net_not_connect">暂无消息</string>
    <string name="check_net_and_refresh">请检查网络后刷新再试</string>
    <string name="refresh">刷新</string>
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="weibo">新浪微博</string>
    <string name="related_article">相关文章</string>
    <string name="related_task">相关游戏</string>
    <string name="baby">宝宝</string>
    <string name="def_rank_num">70%</string>
    <string name="def_rank_txt">您对宝宝的教育已经超过了全国70%的家长</string>
    <string name="modify">修改</string>
    <string name="share">分享</string>
    <string name="up_diary">赞</string>
    <string name="comment_diray">评论</string>
    <string name="write_comment_base_url">http://w.comment.elooking.cn/</string>
    <string name="read_comment_base_url">http://r.comment.elooking.cn/</string>
    <string name="net_error">请求网络失败</string>
    <string name="request_net">请求网络</string>
    <string name="test_first_empty_txt">访问网络出错，请点击上方按钮重新加载~</string>
    <string name="test_desp">测试说明</string>
    <string name="begin_test">开始测试</string>
    <string name="last_subject">上一题</string>
    <string name="next_subject">下一题</string>
    <string name="submit">提交</string>
    <string name="test_evaluation">测试结果</string>
    <string name="repeat_test">重测</string>
    <string name="check_rank">查看排名</string>
    <string name="share_result">分享结果</string>
    <string name="share_test">分享测试</string>
    <string name="social_article_say">看看相关文章怎么说？</string>
    <string name="task_list">任务列表</string>
    <string name="answer_empty">答案不能为空</string>
    <string name="test_txt">测试</string>
    <string name="base_url">http://121.41.101.14:8082/service/service/</string>
    <string name="tab_classroom">微课堂</string>
    <string name="media_flow_all_msg">已经允许2G/3G/4G播放,\n您可在设置中关闭</string>
    <string name="media_flow_title">流量提醒</string>
    <string name="media_flow_content">当前无Wi-Fi，是否允许用流量播放？</string>
    <string name="media_flow_all">总是允许</string>
    <string name="media_flow_all_msg_que">我知道了</string>
    <string name="classroom">云课堂</string>
    <string name="classroom_comment_hient">您的宝贵评价,对我们至关重要...</string>
    <string name="home_work_details_sent">发件人:</string>
    <string name="home_work_details_letter">    家长好：孩子的学习成绩不光和学习知识相关，更重要的是每个孩子自身的学习能力，例如注意力、记忆力等。而这些能力是可以通过科学训练提升的，学能作业会根据学生的学能水平发送相关的训练游戏，来帮助孩子通过练习来提高学习能力，从而提高学习成绩，让孩子认真作答哦。</string>
    <string name="home_work_details_time">2016-2-25 12.04</string>
    <string name="home_work_details_title">学能作业列表：</string>
    <string name="start_test_show">学能测试是测量你的学习能力商数。通过学能测试 你可以了解自己在各个能力上的等级以及变化，你也可以和班级其他用户比较，做出最好的训练计划</string>
    <string name="forshare_set">发送给:</string>
    <string name="forshare_set_title">[链接]开心开心开心开心开心开心网</string>
    <string name="forshare_set_finish">已发送</string>
    <string name="forshare_set_finish_continue">继续阅读文章</string>
    <string name="forshare_set_finish_message">进入消息界面</string>
    <string name="home_name">乐学堂</string>
    <string name="loadding">正在加载...</string>
    <string name="version">版本号：%s</string>
    <string name="version_test">版本号：%s</string>
    <string name="company_name">北京土星教育科技有限公司</string>
    <string name="check_update">检查更新</string>
    <string name="check_update_loading">正在检查更新...</string>
    <string name="download">正在下载</string>
    <string name="upload">正在上传</string>
    <string name="send_ing">发送中</string>
    <string name="send_success">已发送</string>
    <string name="send_failed">发送失败</string>
    <string name="tab_msg">消息</string>
    <string name="tab_msg_pull">努力收取中...</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_find">发现</string>
    <string name="tab_circle">亲子圈</string>
    <string name="tab_my">我</string>
    <string name="school_home">理解孩子</string>
    <string name="tab_child_marking">通知</string>
    <string name="tab_home">学堂</string>
    <string name="tab_setting">设置</string>
    <string name="tab_myprofile">设置</string>
    <string name="class_picture">相册</string>
    <string name="workshow_text">   学能总成绩（0-60分）为学生在作业和学能测试中的综合表现，反应学生的学习能力水平，系统会根据学生的学能成绩来定制学生的作业。</string>
    <string name="setwork_list">系统定制作业列表</string>
    <string name="detail_info">详细信息</string>
    <string name="show_all">全文</string>
    <string name="show_more">更多</string>
    <string name="collapse_more">收起</string>
    <string name="my_remember">童年印记</string>
    <string name="self_remember">我的印记</string>
    <string name="son_circle">亲子圈</string>
    <string name="integral_shop">微豆商城</string>
    <string name="find_activity">活动专区</string>
    <string name="cj_tecord">抽奖记录</string>
    <string name="my_favorite">我的收藏</string>
    <string name="today">今天</string>
    <string name="msg">消息</string>
    <string name="area">地 区</string>
    <string name="signature">个性签名</string>
    <string name="select_photo_album">从相册选择</string>
    <string name="msg_list">消息列表</string>
    <string name="send_remember">发表童年印记</string>
    <string name="child_remember">的童年</string>
    <string name="detail">详情</string>
    <string name="select_child">选择孩子</string>
    <string name="notice">通知</string>
    <string name="notice_detail">通知详情</string>
    <string name="notice_send">发件详情</string>
    <string name="notice_muilte">群发通知</string>
    <string name="notice_select_contacts">选择接收用户</string>
    <string name="cloudcard_my">我</string>
    <string name="cloudcard_prompt">的云卫士卡号</string>
    <string name="cloudcard_title">云卫士卡号</string>
    <string name="name_null">您输入的帐号不能为空</string>
    <string name="name_format_null">您输入的帐号不正确噢</string>
    <string name="pwd_null">密码不能为空！</string>
    <string name="pwd_length">密码长度6~16个字符</string>
    <string name="verification_success_msg">发送验证码成功</string>
    <string name="verification_failed_msg">验证码不正确</string>
    <string name="no_token">登录失败，请稍后重试！</string>
    <string name="post_null">发送内容不能为空！</string>
    <string name="text_too_long">发送内容超过400字！</string>
    <string name="praise_success_msg">赞成功</string>
    <string name="favorite_success_msg">收藏成功</string>
    <string name="login_failed_msg">登录失败</string>
    <string name="login_failed_msg_null">登录失败(99)</string>
    <string name="login_failed_msg_100">登录失败(100)</string>
    <string name="login_failed_no_name">账号不存在，请重新输入</string>
    <string name="login_failed_no_pwd">密码不正确，请重新输入</string>
    <string name="login_failed_user_disabled">此账号已被禁用，请联系学校</string>
    <string name="user_info_failed_msg">获取用户失败</string>
    <string name="user_password_success">密码修改成功</string>
    <string name="user_password_faild">密码修改失败</string>
    <string name="user_signature_sccess">发表个性签名成功</string>
    <string name="user_signature_faild">发表个性签名失败</string>
    <string name="time_short">录音时间太短</string>
    <string name="record_timeout">只能录音1分钟</string>
    <string name="head_error">更新头像失败</string>
    <string name="head_success">更新头像成功</string>
    <string name="loadding_error">加载图片失败</string>
    <string name="current_pwd_error">当前密码错误</string>
    <string name="save_pic">图片保存到%s</string>
    <string name="no_child">没有选择接收用户，请选择！</string>
    <string name="select_relationship">请选择一个身份！</string>
    <string name="cloudcard_get_failed">获取卡号失败</string>
    <string name="cloudcard_save_failed">该卡号已被绑定，请检查卡号是否正确或联系老师处理</string>
    <string name="cloudcard_save_success">修改成功！</string>
    <string name="cloudcard_check">您输入的卡号不是8位数，请检查后重新输入</string>
    <string name="log_upload_ok">上传日志信息成功</string>
    <string name="log_upload_fail">上传日志信息失败</string>
    <string name="edit_number_count">您输入的字数超过限制</string>
    <string name="video_erroy">设备不兼容小视频功能</string>
    <string name="my_unread_list">\@ 与我相关</string>
    <string name="authority_msg">摄像头启动失败,请尝试在手机,"全部设置-系统/安全-应用-乐学堂-权限-摄像头"中打开权限</string>
    <string name="btn_login">登录</string>
    <string name="btn_finish">完成</string>
    <string name="btn_back">返 回 </string>
    <string name="ask">提问</string>
    <string name="question_hot">热门</string>
    <string name="question_new">最新</string>
    <string name="personal_question">问题</string>
    <string name="personal_answer">回答</string>
    <string name="btn_frash">刷新</string>
    <string name="btn_sound">按住 说话</string>
    <string name="btn_sound_stop">停止录音</string>
    <string name="btn_attention_all">全部关注</string>
    <string name="btn_attention_all_com">确认全部关注</string>
    <string name="btn_chat">进入聊天</string>
    <string name="btn_exit">退出登录</string>
    <string name="btn_start_work">开始作业</string>
    <string name="btn_dialog_copy">复 制</string>
    <string name="btn_dialog_delete">删 除</string>
    <string name="btn_dialog_resend">重新发送</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_attention">关注</string>
    <string name="btn_no_attention">取消关注</string>
    <string name="btn_send_msg">发消息</string>
    <string name="btn_call">打电话</string>
    <string name="btn_all">全选</string>
    <string name="btn_all_no">取消全选</string>
    <string name="btn_true">确定(%d)</string>
    <string name="btn_ok">确定</string>
    <string name="btn_sends">发送(%d)</string>
    <string name="btn_no_msg">屏蔽消息</string>
    <string name="btn_search">搜索</string>
    <string name="btn_setting">设置</string>
    <string name="btn_send_muilte">群发</string>
    <string name="btn_msg">消息</string>
    <string name="btn_commit">完成</string>
    <string name="btn_info_photo">拍照</string>
    <string name="btn_info_text">照片</string>
    <string name="btn_info_Image">相册</string>
    <string name="btn_info_photo_album">从手机相册选择</string>
    <string name="btn_msg_list">消息列表</string>
    <string name="btn_change_bg">更换相册封面</string>
    <string name="btn_clear_inbox_notice">清空收件箱</string>
    <string name="btn_clear_outbox_notice">清空发件箱</string>
    <string name="btn_retry">重新上传</string>
    <string name="btn_clear">清 空</string>
    <string name="btn_send_friend">发送给朋友</string>
    <string name="btn_save_phone">保存到手机</string>
    <string name="btn_delete">删除</string>
    <string name="btn_send">发送</string>
    <string name="btn_new_msg">%s条新消息</string>
    <string name="btn_favorite">收 藏</string>
    <string name="btn_person">%d人</string>
    <string name="btn_copy">复制</string>
    <string name="wipe">扫一扫</string>
    <string name="user_info">个人信息</string>
    <string name="change_pwd">修改密码</string>
    <string name="my_baby">我的孩子</string>
    <string name="invatation_man">邀请家人</string>
    <string name="baby_wuyou">宝宝保险</string>
    <string name="account_safety">帐户安全</string>
    <string name="home_wuyou">在园无忧</string>
    <string name="child_friend">孩子姓名</string>
    <string name="change_skin">扮靓小屋</string>
    <string name="user_private">隐 私</string>
    <string name="msg_remind">消息提醒</string>
    <string name="clear_chat_msg">清空缓存记录</string>
    <string name="clear_notice_msg">清空通知记录</string>
    <string name="service_deal">服务协议</string>
    <string name="clear_chat_msg_toast">清空聊天记录成功！</string>
    <string name="clear_notice_msg_toast">清空通知记录成功！</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="feedback">在线反馈</string>
    <string name="about">关于</string>
    <string name="no_bind">未绑定</string>
    <string name="has_bind">已绑定</string>
    <string name="bind_card">绑定</string>
    <string name="re_bind_card">解绑</string>
    <string name="msg_disturb">消息免打扰时段</string>
    <string name="set_msg_disturb">乐学堂在运行时,你可以设置是否需要声音或者震动</string>
    <string name="all_day">全天开启</string>
    <string name="night_open">只在夜间开启</string>
    <string name="close">关闭</string>
    <string name="night_disturb_time">夜间免打扰时间为22:00——08:00</string>
    <string name="update_cancel">取消</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_class">班级</string>
    <string name="platform_copy_link">复制链接</string>
    <string name="platform_sina">微博</string>
    <string name="platform_weichat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
</resources>