<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minWidth="250dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_dialog_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:gravity="center|left"
                android:paddingTop="14dp"
                android:text="@string/btn_exit"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_cancle_btn_selector"
                android:text="@string/btn_cancel"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_15" />

            <Button
                android:id="@+id/confirm_btn"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_que_btn_selector"
                android:text="@string/btn_ok"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>