<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
         android:paddingLeft="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_44"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voice"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <CheckBox
                android:id="@+id/cb_Voice"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/ios7_btn"
                android:button="@null" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/login_line" />

        <LinearLayout
            android:layout_width="fill_parent"
         android:layout_height="@dimen/dp_44"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shake"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <CheckBox
                android:id="@+id/cb_Shake"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:background="@drawable/ios7_btn"
                android:button="@null" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/set_msg_disturb"
        android:textColor="@color/qzq_name"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_44"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/msg_disturb"
                android:textColor="@color/qzq_name"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/login_line" />

        <LinearLayout
            android:id="@+id/rbAll_ll"
            android:layout_width="fill_parent"
             android:layout_height="@dimen/dp_44"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_day"
               style="@style/text_setting_black"/>

            <TextView
                android:id="@+id/rbAll"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                  android:focusable="false"
                  android:visibility="gone"
               android:background="@drawable/setting_check_box_checked"/>
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/login_line" />

        <LinearLayout
            android:id="@+id/rbNight_ll"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_44"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/night_open"
               style="@style/text_setting_black"/>

            <TextView
                android:id="@+id/rbNight"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                  android:focusable="false"
                  android:visibility="gone"
                android:background="@drawable/setting_check_box_checked"/>
        </LinearLayout>

         <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/login_line" />

        <LinearLayout
            android:id="@+id/rbClose_ll"
            android:layout_width="fill_parent"
           android:layout_height="@dimen/dp_44"
            android:paddingRight="10dp"
            android:gravity="center_vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/close"
                style="@style/text_setting_black" />

            <TextView
                android:id="@+id/rbClose"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
               android:focusable="false"
               android:visibility="gone"
               android:background="@drawable/setting_check_box_checked" />
        </LinearLayout>
    </LinearLayout>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:text="@string/night_disturb_time"
        android:textColor="@color/qzq_name" />

</LinearLayout>