<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingTop="@dimen/dp_20"
              android:paddingBottom="@dimen/dp_10">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="分享到:"
                  android:textSize="@dimen/sp_14"
                  android:textColor="@color/black"
                  android:layout_marginLeft="@dimen/dp_20"/>
    </LinearLayout>
    <View android:layout_width="fill_parent"
          android:layout_height="1px"
          android:layout_marginBottom="@dimen/dp_10"
          android:layout_marginTop="@dimen/dp_10"
          android:background="@color/gray_line"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

        <LinearLayout
                android:id="@+id/ly_share_weichat_circle"
                style="@style/dialog_content_share_ll">

            <TextView
                    style="@style/dialog_content_share_text"
                    android:drawableTop="@drawable/share_icon_wechatfriends_selector"
                    android:text="@string/platform_weichat_circle"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/ly_share_weichat"
                style="@style/dialog_content_share_ll">

            <TextView
                    style="@style/dialog_content_share_text"
                    android:drawableTop="@drawable/share_icon_wechat_selector"
                    android:text="@string/platform_weichat"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/ly_share_sina_weibo"
                style="@style/dialog_content_share_ll"
                android:visibility="gone">

            <TextView
                    style="@style/dialog_content_share_text"
                    android:drawableTop="@drawable/share_icon_sinaweibo_selector"
                    android:text="@string/platform_sina"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ly_share_qq"
                style="@style/dialog_content_share_ll">

            <TextView
                    style="@style/dialog_content_share_text"
                    android:drawableTop="@drawable/share_icon_qq_selector"
                    android:text="@string/platform_qq"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ly_share_class"
                style="@style/dialog_content_share_ll">

            <ImageView
                android:layout_marginTop="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/articleshare_classes"
                />

            <TextView
                android:layout_marginTop="@dimen/dp_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/black5"
                android:text="@string/platform_class"/>
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ly_share_copy_link"
                style="@style/dialog_content_share_ll">

            <TextView
                    style="@style/dialog_content_share_text"
                    android:drawableTop="@drawable/share_icon_copy_link_selector"
                    android:text="@string/platform_copy_link"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/dp_20"
            android:orientation="horizontal"
            android:visibility="gone">


        <!--<LinearLayout-->
        <!--android:id="@+id/ly_share_copy_link"-->
        <!--style="@style/dialog_content_share_ll" >-->

        <!--<TextView-->
        <!--style="@style/dialog_content_share_text"-->
        <!--android:drawableTop="@drawable/share_icon_copy_link_selector"-->
        <!--android:text="@string/platform_copy_link" />-->
        <!--</LinearLayout>-->
        <LinearLayout
                style="@style/dialog_content_share_ll">

            <TextView
                    style="@style/dialog_content_share_text"/>
        </LinearLayout>
        <LinearLayout
                style="@style/dialog_content_share_ll">

            <TextView
                    style="@style/dialog_content_share_text"/>
        </LinearLayout>
        <LinearLayout
                style="@style/dialog_content_share_ll"
                android:visibility="gone">

            <TextView
                    style="@style/dialog_content_share_text"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>