<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="140dp"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dp_60"
    android:layout_marginRight="@dimen/dp_60"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forshare_set_finish"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray_line"></View>


        <TextView
            android:id="@+id/tv_forshare_set_finish_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forshare_set_finish_continue"
            android:textColor="@color/text_teacher"
            android:textSize="@dimen/sp_16" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray_line"></View>

        <TextView
            android:id="@+id/tv_forshare_set_finish_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forshare_set_finish_message"
            android:textColor="@color/text_teacher"
            android:textSize="@dimen/sp_16" />


    </LinearLayout>
</LinearLayout>